# NeuralNet

./: README.md
neuralNet_sb/: CMakeLists.txt  main.c  test Matrix_Vector.txt
neuralNet_sb/ExceptionHandling/: error.c  error.h
neuralNet_sb/Layer/: Layer.c  Layer.h
neuralNet_sb/Layer/Activation/: ReluActivationLayer.c  ReluActivationLayer.h  SigmoidActivationLayer.c  SigmoidActivationLayer.h
neuralNet_sb/Layer/DenseLayer/: DenseLayer.c  DenseLayer.h
neuralNet_sb/Layer/SoftmaxLayer/: SoftmaxLayer.c  SoftmaxLayer.h
neuralNet_sb/Linagb/: Linagb.c  Linagb.h
neuralNet_sb/Matrix/: Matrix.c  Matrix.h
neuralNet_sb/Object/: ObjectManager.c  ObjectManager.h
neuralNet_sb/Object/Matrix/: Matrix.c  Matrix.h
neuralNet_sb/Object/Vector/: Vector.c  Vector.h
neuralNet_sb/Vector/: Vector.c  Vector.h
